error_log_v2.txt
install
+- install abi
   +- compile exe abi Debug native 1 errors
lib\features\database\vector_search_gpu.zig:1:1: error: file exists in modules 'accelerator' and 'abi'
lib\features\database\vector_search_gpu.zig:1:1: note: files must belong to only one module
lib\accelerator\mod.zig:6:31: note: file is imported here by the root of module 'accelerator'
pub const CpuDriver = @import("backends/cpu_driver.zig").CpuDriver;
                              ^~~~~~~~~~~~~~~~~~~~~~~~~
lib\features\database\vector_search_gpu.zig:126:31: note: file is imported here
    const CpuDriver = @import("../../accelerator/backends/cpu_driver.zig").CpuDriver;
                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
lib\features\database\mod.zig:15:39: note: which is imported here
pub const vector_search_gpu = @import("vector_search_gpu.zig");
                                      ^~~~~~~~~~~~~~~~~~~~~~~
lib\features\mod.zig:15:30: note: which is imported here
pub const database = @import("database/mod.zig");
                             ^~~~~~~~~~~~~~~~~~
lib\mod.zig:17:30: note: which is imported here by the root of module 'abi'
pub const features = @import("features/mod.zig");
                             ^~~~~~~~~~~~~~~~~~
error: 1 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1484+d0ba6642b\\zig.exe" build-exe -ODebug --dep abi "-Mroot=C:\\Users\\donald\\abi\\tools\\cli\\main.zig" -ODebug --dep build_options --dep accelerator "-Mabi=C:\\Users\\donald\\abi\\lib\\mod.zig" "-Mbuild_options=.zig-cache\\c\\3a7d921129c2b66941febb189f7b7809\\options.zig" -ODebug --dep build_options "-Maccelerator=C:\\Users\\donald\\abi\\lib\\accelerator\\mod.zig" --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name abi --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1484+d0ba6642b\\lib\\" --listen=-

Build Summary: 1/4 steps succeeded (1 failed)
install transitive failure
+- install abi transitive failure
   +- compile exe abi Debug native 1 errors

error: the following build command failed with exit code 1:
.zig-cache\o\2b51c623da3485ba360e0f5597b3605c\build.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\zig.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1484+d0ba6642b\lib C:\Users\donald\abi .zig-cache C:\Users\donald\AppData\Local\zig --seed 0xdf76fee8 -Z7375e5950ff97c2f --color off
